2002-08-19  Maciej Stachowiak  <mjs@apple.com>

	Fixed the bug that made sony.com menus come out wrong and made
	aa.com crash (Radar 3027762).
	
	Mode most methods inline.
	
        * kjs/completion.cpp:
        * kjs/completion.h:

2002-08-19  Maciej Stachowiak  <mjs@apple.com>

	Maintain stack of old "arguments" property values for functions
	implicitly on the system stack instead of explicitly in the
	FunctionImp. This eliminates only a trivial number of GC
	allocations (less than 200) but eliminates one of the two cases
	where a ListImp * is stored directly, paving the way to separate
	List from Value.
	
        * kjs/function.h: Remove argStack, pushArgs and popArgs.
        * kjs/function.cpp:
        (FunctionImp::FunctionImp): Don't initalize argStack.
        (FunctionImp::~FunctionImp): Remove comment about argStack.
        (FunctionImp::mark): Don't mark the argStack.
        (FunctionImp::call): Save old "arguments" property in a Value,
	where it will be GC-protected, rather than keeping a list, and
	restore the old value when done executing.

2002-08-18  Darin Adler  <darin@apple.com>

        * kjs/internal.cpp: (KJS::printInfo): Remove one more CompletionType
	that Maciej missed.

2002-08-18  Maciej Stachowiak  <mjs@apple.com>

	Remove stray references to CompletionType and CompletionImp.
	
        * kjs/completion.h:
        * kjs/object.cpp:
        * kjs/value.h:

2002-08-18  Maciej Stachowiak  <mjs@apple.com>

	Separated Completion from Value and made it a pure stack
	object. This removed another 160,000 of the remaining 580,000
	garbage collected object allocations.

	6% speed increas on cvs-js-performance test.
	
        * kjs/completion.cpp: Added. New implementation that doesn't
	require a ValueImp *.
        (Completion::Completion):
        (Completion::complType):
        (Completion::value):
        (Completion::target):
        (Completion::isValueCompletion):
        * kjs/completion.h: Added.
        * kjs/function.cpp: