@@ -1,3 +1,9 @@
+2002-08-20  Maciej Stachowiak  <mjs@apple.com>
+
+        * kjs/object.cpp: Don't reference other ValueImps in the
+	destructor, they may ha ve already been destroyed, and will have
+	GC_ALLOWED set already in any case.
+w
 2002-08-19  Maciej Stachowiak  <mjs@apple.com>
 
 	Fixed the bug that made sony.com menus come out wrong and made
